--- a/analysis/luanalysis.cabal
+++ b/analysis/luanalysis.cabal
@@ -18,8 +18,8 @@ cabal-version:       >=1.10
 
 executable luanalysis
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       GLua.AG.AST, GLua.AG.PrettyPrint, GLuanalysis.AG.ControlFlow
   -- other-extensions:
-  build-depends:       base >=4.7 && <4.8, gluaparser, uuagc, uuagc-cabal
+  build-depends:       base, uuagc, uuagc-cabal, uu-parsinglib, pretty, ListLike
   hs-source-dirs:      src
   default-language:    Haskell2010
