--- a/analysis/luanalysis.cabal
+++ b/analysis/luanalysis.cabal
@@ -20,6 +20,6 @@ executable luanalysis
   main-is:             Main.hs
   other-modules:       GLua.AG.AST, GLua.AG.PrettyPrint, GLuanalysis.AG.ControlFlow
   -- other-extensions:
-  build-depends:       base, uuagc, uuagc-cabal, uu-parsinglib, pretty, ListLike, fgl, filepath
+  build-depends:       base, uuagc, uuagc-cabal, uu-parsinglib, pretty, ListLike, fgl, filepath, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
