--- a/analysis/luanalysis.cabal
+++ b/analysis/luanalysis.cabal
@@ -16,7 +16,7 @@ build-type:          Custom
 -- extra-source-files:
 cabal-version:       >=1.10
 
-executable luanalysis
+executable gluanalysis
   main-is:             Main.hs
   other-modules:       GLua.AG.AST, GLua.AG.PrettyPrint, GLuanalysis.AG.ControlFlow, GLuanalysis.AG.LiveVariables
   -- other-extensions:
